OCT-538 preventing proposals from locking GLM

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -23,7 +23,8 @@
     "lockGlm": "Lock GLM",
     "transactionSuccessful": "Transaction successful",
     "gettingStarted": "Getting started",
-    "octantTips": "Octant tips"
+    "octantTips": "Octant tips",
+    "proposalForbiddenOperation": "As a proposal you are not able to proceed with this operation"
   },
   "components": {
     "dedicated": {
