OCT-584 Implement improvements to Wallet sheet view

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -164,7 +164,7 @@
       },
       "walletModal": {
         "balances": "Balances",
-        "connectedWalletBalances": "Connected Wallet Balances",
+        "wallet": "Wallet",
         "disconnectWallet": "Disconnect Wallet"
       },
       "withdrawEth": {
