--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -188,6 +188,12 @@
   "meta": {
     "description": "Octant is a platform for experiments in decentralized governance that reward participation"
   },
+  "toasts":  {
+    "cantRemoveProjectWithDonations": {
+      "title": "You can't remove projects with donations",
+      "message": "Set your donation to zero in Allocate view to enable project removal"
+    }
+  },
   "views": {
     "allocation": {
       "allocationSuccessful": "Allocation successful",
