OCT-750 Connect wallet: "WalletConnect" instead of "Wallet connect"

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -88,7 +88,7 @@
       "connectWallet": {
         "browserWallet": "Browser wallet",
         "connecting": "Connecting ...",
-        "walletConnect": "Wallet connect"
+        "walletConnect": "WalletConnect"
       },
       "donationEstimateBox": {
         "donationEstimate": "Donation estimate",
