--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -211,6 +211,10 @@
   },
   "views": {
     "allocation": {
+      "allocationItem": {
+        "epoch1": "No funding threshold in Epoch 1",
+        "standard": "{{sum}} of {{threshold}}"
+      },
       "allocationSuccessful": "Allocation successful",
       "tip": {
         "lockGlm": {
