OCT-782 Update Sharing tool tip

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -31,7 +31,7 @@
     "proposalForbiddenOperation": "As a proposal you are not able to proceed with this operation",
     "history": "History",
     "availableNow": "Available now",
-    "copy": "Copy",
+    "copy": "Copy link",
     "copied": "Copied"
   },
   "components": {
