OCT-717 Implement skeleton loaders for Donors section

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -102,9 +102,9 @@
       },
       "donorsList": {
         "donors": "Donors",
-        "seeAll": "See all",
         "seeLess": "See less",
-        "donationsNotEnabled": "Donations are not enabled in this epoch"
+        "donationsNotEnabled": "Donations are not enabled in this epoch",
+        "viewAll": "View all"
       },
       "glmLock": {
         "lock": "Lock",
