OCT-741: Modify Project Detail view so the scroll ends at the last project && OCT-742 Add Back to Top button to Project Detail view

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -326,7 +326,8 @@
       }
     },
     "proposal": {
-      "loadingProblem": "Loading of this proposal encountered a problem."
+      "loadingProblem": "Loading of this proposal encountered a problem.",
+      "backToTop": "Back to Top"
     },
     "proposals": {
       "tip": {
