OCT-709 Implement donors section modal / sheet views && OCT-710 Change all Mobile Project detail page H1 & H2 sizes

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -101,11 +101,12 @@
         "yourTotal": "Your total",
         "matchFundingEstimate": "Match Funding estimate"
       },
-      "donorsList": {
-        "donors": "Donors",
-        "seeLess": "See less",
+      "donors": {
         "donationsNotEnabled": "Donations are not enabled in this epoch",
         "viewAll": "View all"
+      },
+      "donorsHeader": {
+        "donors": "Donors"
       },
       "glmLock": {
         "lock": "Lock",
