--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -345,6 +345,9 @@
       "cryptoMainValueDisplay": "Use crypto as main value display",
       "alwaysShowOnboarding": "Always show onboarding",
       "alwaysShowOctantTips": "Always show tips"
+    },
+    "syncStatus": {
+      "information": "We're synchronizing things to prepare the<br/>next epoch, so the app will be unavailable<br/>for a little while. Please check back soon."
     }
   }
 }
