--- a/backend/migrations/README
+++ b/backend/migrations/README
@@ -4,8 +4,8 @@ Single-database configuration for Flask.
 
 In order to create a new migration run the following:
 
-```
+```bash
 flask db upgrade # optional if you do not yet have local db files
 flask db migrate
-flask db upgrade 
+flask db upgrade
 ```
