OCT-855 New History: Update Withdraw flow Q3

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -209,10 +209,7 @@
       },
       "timeCounter": {
         "hours": "Hours",
-        "hrs": "Hrs",
-        "min": "Min",
         "minutes": "Minutes",
-        "sec": "Sec",
         "seconds": "Seconds"
       },
       "tos": {
@@ -226,8 +223,10 @@
       "withdrawEth": {
         "withdrawalsDistributedEpoch": "Withdrawals are distributed when Epoch {{currentEpoch}} ends",
         "rewardsBudget": "Rewards Budget",
-        "amountToWithdraw": "Amount to withdraw",
-        "requestWithdrawal": "Request withdrawal"
+        "amount": "Amount",
+        "estimatedGasPrice": "Est. gas price",
+        "withdrawAll": "Withdraw all",
+        "waitingForConfirmation": "Waiting for confirmation"
       }
     }
   },
