OCT-936 Update app UI for Weighted Averages

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -230,10 +230,7 @@
       "tip": {
         "lockGlm": {
           "title": "Lock GLM to earn",
-          "text": {
-            "standard": "Lock GLM tokens for at least one full epoch to earn ETH rewards you can donate or withdraw",
-            "epoch1": "Lock GLM tokens for as long as\u00a0you can to earn ETH rewards you can donate or withdraw"
-          }
+          "text": "Lock GLM tokens for as long as possible to earn ETH rewards you can donate or withdraw"
         },
         "rewards": {
           "title": "You have rewards!",
