OCT-985 Fix lack of "no donations" message in donors sections

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -104,6 +104,7 @@
       },
       "donors": {
         "donationsNotEnabled": "Donations are not enabled in this epoch",
+        "noDonationsYet": "No donations yet",
         "viewAll": "View all"
       },
       "donorsHeader": {
