--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -236,8 +236,11 @@
           }
         },
         "rewards": {
-          "title": "You have rewards!",
-          "text": "During allocation period you can donate rewards to projects and allocate them to yourself"
+          "title": "Time to allocate",
+          "text": {
+            "desktop": "Add projects and use the slider to divide rewards between yourself and your chosen projects",
+            "mobile": "Add projects and use the slider to divide rewards between yourself & your chosen projects"
+          }
         },
         "changedYourMind": {
           "title": "Changed your mind?",
