OCT-982 Change title of wallet sheet modal section "Rewards" to "Personal allocation"

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -173,8 +173,8 @@
       "proposalsList": {
         "epochArchive": "Epoch {{epoch}} Archive"
       },
-      "rewardsBox": {
-        "rewards": "Rewards"
+      "walletPersonalAllocation": {
+        "label": "Personal allocation"
       },
       "timeCounter": {
         "days": "Days",
