hotfix: OCT-827 new history withdrawal modal header key missing

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -163,7 +163,8 @@
         "header": {
           "allocation": "Epoch {{epoch}} Allocations",
           "lock": "Locked GLM",
-          "unlock": "Unlocked GLM"
+          "unlock": "Unlocked GLM",
+          "withdrawal": "Withdrew ETH"
         },
         "sections": {
           "allocationPersonal": "Personal",
